--- a/LiveTubeRec/App.config
+++ b/LiveTubeRec/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="dll"/>
+    </assemblyBinding>
+  </runtime>
+  <nlog internalLogToConsole="true" >
+    <targets>
+      <target name="logToConsole"
+              type="Console"
+              layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}" />
+      <target name="logToFile"
+              type="File" 
+              fileName="${basedir}/logs/${shortdate}.log"
+              layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}" />
+      <target name="logToControl"
+              type="FormControl"
+              controlName="textBox_Log"
+              formName="Form1"
+              layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring} ${newline}" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="logToConsole,logToFile,logToControl" />
+    </rules>
+  </nlog>
 </configuration>
