--- a/LiveTubeRec/LiveTubeRec.csproj
+++ b/LiveTubeRec/LiveTubeRec.csproj
@@ -92,21 +92,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectoryUtils.cs" />
+    <Compile Include="Class\Util\DirectoryUtils.cs" />
+    <Compile Include="Class\YouTubeData\ChannelManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IniFile.cs" />
-    <Compile Include="LiveData.cs" />
+    <Compile Include="Class\Util\IniFile.cs" />
+    <Compile Include="Class\YouTubeData\LiveData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Schedule.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="ChannelItem.cs" />
-    <Compile Include="YouTubeDataProvider.cs" />
+    <Compile Include="Class\Schedule.cs" />
+    <Compile Include="Class\Util\Utils.cs" />
+    <Compile Include="Class\YouTubeData\ChannelItem.cs" />
+    <Compile Include="Class\YouTubeData\YouTubeDataProvider.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
