--- a/LiveTubeRec/LiveTubeRec.csproj
+++ b/LiveTubeRec/LiveTubeRec.csproj
@@ -92,22 +92,25 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class\Util\DirectoryUtils.cs" />
-    <Compile Include="Class\YouTubeData\ChannelManager.cs" />
+    <Compile Include="class\util\DirectoryUtils.cs" />
+    <Compile Include="class\youtubedata\ChannelManager.cs" />
+    <Compile Include="class\youtubedata\Live.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Class\Util\IniFile.cs" />
-    <Compile Include="Class\YouTubeData\LiveData.cs" />
+    <Compile Include="class\util\IniFile.cs" />
+    <Compile Include="ProcessExe.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Class\Schedule.cs" />
-    <Compile Include="Class\Util\Utils.cs" />
-    <Compile Include="Class\YouTubeData\ChannelItem.cs" />
-    <Compile Include="Class\YouTubeData\YouTubeDataProvider.cs" />
+    <Compile Include="class\Schedule.cs" />
+    <Compile Include="class\util\Utils.cs" />
+    <Compile Include="class\youtubedata\Channel.cs" />
+    <Compile Include="class\youtubedata\YouTubeDataProvider.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
