youtubelive実行未実施

--- a/LiveTubeRec/App.config
+++ b/LiveTubeRec/App.config
@@ -27,7 +27,7 @@
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring} ${newline}" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="logToConsole,logToFile,logToControl" />
+      <logger name="*" minlevel="Trace" writeTo="logToConsole,logToFile,logToControl" />
     </rules>
   </nlog>
 </configuration>
