--- a/LiveTubeRec/LiveTubeRec.csproj
+++ b/LiveTubeRec/LiveTubeRec.csproj
@@ -95,6 +95,7 @@
     <Compile Include="class\util\DirectoryUtils.cs" />
     <Compile Include="class\youtubedata\ChannelManager.cs" />
     <Compile Include="class\youtubedata\Live.cs" />
+    <Compile Include="config\Config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,12 +103,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="class\util\IniFile.cs" />
-    <Compile Include="ProcessExe.cs">
+    <Compile Include="ProcessInfoExe.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="class\Schedule.cs" />
+    <Compile Include="class\util\Schedule.cs" />
     <Compile Include="class\util\Utils.cs" />
     <Compile Include="class\youtubedata\Channel.cs" />
     <Compile Include="class\youtubedata\YouTubeDataProvider.cs" />
