--- a/LiveTubeRec/App.config
+++ b/LiveTubeRec/App.config
@@ -13,21 +13,36 @@
   </runtime>
   <nlog internalLogToConsole="true" >
     <targets>
-      <target name="logToConsole"
+      <target name="debugToConsole"
               type="Console"
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}" />
-      <target name="logToFile"
+      <target name="debugToFile"
               type="File" 
               fileName="${basedir}/logs/${shortdate}.log"
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}" />
-      <target name="logToControl"
+      <target name="debugToControl"
               type="FormControl"
               controlName="textBox_Log"
               formName="Form1"
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring} ${newline}" />
+
+      <target name="infoToConsole"
+        type="Console"
+        layout="${longdate} [${uppercase:${level:padding=-5}}] ${message} ${exception:format=tostring}" />
+      <target name="infoToFile"
+              type="File"
+              fileName="${basedir}/logs/${shortdate}.log"
+              layout="${longdate} [${uppercase:${level:padding=-5}}] ${message} ${exception:format=tostring}" />
+      <target name="infoToControl"
+              type="FormControl"
+              controlName="textBox_Log"
+              formName="Form1"
+              layout="${longdate} [${uppercase:${level:padding=-5}}] ${message} ${exception:format=tostring} ${newline}" />
+
     </targets>
     <rules>
-      <logger name="*" minlevel="Trace" writeTo="logToConsole,logToFile,logToControl" />
+      <!--<logger name="*" minlevel="Trace" writeTo="debugToConsole,debugToFile,debugToControl" />-->
+      <logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile,infoToControl" />
     </rules>
   </nlog>
 </configuration>
