--- a/LiveTubeRec/NLog.config
+++ b/LiveTubeRec/NLog.config
@@ -16,7 +16,6 @@
    -->
   <targets>
     <target name="debugger" xsi:type="Debugger"/>
-
     <target name="f"
             xsi:type="File"
             fileName="aaa.log"
@@ -29,8 +28,7 @@
     <target name="f"
         xsi:type="Console"
         layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}" />
-
-
+    
     <!--
     add your targets here
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -45,7 +43,7 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="f" />
+    <logger name="*" minlevel="Info" writeTo="f" />
 
     <!-- add your logging rules here -->
 
