更新中のフォームロックの解消

--- a/LiveTubeRec/App.config
+++ b/LiveTubeRec/App.config
@@ -42,6 +42,7 @@
     </targets>
     <rules>
       <!--<logger name="*" minlevel="Trace" writeTo="debugToConsole,debugToFile,debugToControl" />-->
+      <!--<logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile" />-->
       <logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile,infoToControl" />
     </rules>
   </nlog>
