--- a/LiveTubeRec/App.config
+++ b/LiveTubeRec/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -12,6 +12,9 @@
     </assemblyBinding>
   </runtime>
   <nlog internalLogToConsole="true" >
+    <extensions>
+      <add assembly="NLog.Windows.Forms"/>
+    </extensions>
     <targets>
       <target name="debugToConsole"
               type="Console"
@@ -24,6 +27,7 @@
               type="FormControl"
               controlName="textBox_Log"
               formName="Form1"
+              reverseOrder ="true"
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring} ${newline}" />
 
       <target name="infoToConsole"
@@ -37,13 +41,14 @@
               type="FormControl"
               controlName="textBox_Log"
               formName="Form1"
+              reverseOrder ="true"
               layout="${longdate} [${uppercase:${level:padding=-5}}] ${message} ${exception:format=tostring} ${newline}" />
 
     </targets>
     <rules>
-      <!--<logger name="*" minlevel="Trace" writeTo="debugToConsole,debugToFile,debugToControl" />-->
+      <logger name="*" minlevel="Trace" writeTo="debugToConsole,debugToFile,debugToControl" />
       <!--<logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile" />-->
-      <logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile,infoToControl" />
+      <!--<logger name="*" minlevel="Info" writeTo="infoToConsole,infoToFile,infoToControl" />-->
     </rules>
   </nlog>
 </configuration>
