--- a/LiveTubeRec/LiveTubeReport.csproj
+++ b/LiveTubeRec/LiveTubeReport.csproj
@@ -153,7 +153,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="LiveTubeReport_一時キー.pfx" />
     <None Include="NLog.config">
       <SubType>Designer</SubType>
     </None>
@@ -200,9 +199,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Test\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
